--- a/src/scss/App.css
+++ b/src/scss/App.css
@@ -1,17 +1,57 @@
+@import url("https://fonts.googleapis.com/css2?family=Sofia+Sans+Semi+Condensed:ital,wght@0,1..1000;1,1..1000&display=swap");
 @import url(./partials/_buttons.scss);
+@import url(./partials/_form-elements.scss);
 @import url(./partials/_navbar.scss);
 * {
+  font-size: 16px;
+  font-family: "Sofia Sans Semi Condensed", sans-serif;
   margin: 0;
+  margin-inline: 0;
+  margin-block: 0;
+  padding-block: 0;
+  padding-inline: 0;
   padding: 0;
-  inset: 0;
   text-decoration: none;
   list-style-type: none;
   box-sizing: border-box;
-  font-size: 16px;
 }
 
 a {
   text-decoration: none;
+  font-size: inherit;
+  color: inherit;
+}
+
+.container {
+  max-width: 1320px;
+  padding: 0 1rem;
+  margin: 0 auto;
+}
+
+@media only screen and (max-width: 575px) {
+  .container {
+    max-width: 100%;
+  }
+}
+@media (min-width: 576px) and (max-width: 767px) {
+  .container {
+    max-width: 540px;
+  }
+}
+@media (min-width: 768px) and (max-width: 991px) {
+  .container {
+    max-width: 720px;
+  }
+}
+@media (min-width: 992px) and (max-width: 1199px) {
+  .container {
+    max-width: 720px;
+  }
+}
+@media (min-width: 1200px) and (max-width: 1399px) {
+  .container {
+    max-width: 1140px;
+  }
 }
 
 /*# sourceMappingURL=App.css.map */
