home banner completed

--- a/src/scss/App.css
+++ b/src/scss/App.css
@@ -1,10 +1,12 @@
-@import url("https://fonts.googleapis.com/css2?family=Sofia+Sans+Semi+Condensed:ital,wght@0,1..1000;1,1..1000&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap");
 @import url(./partials/_buttons.scss);
 @import url(./partials/_form-elements.scss);
+@import url(./partials/_heads.scss);
 @import url(./partials/_navbar.scss);
+@import url(./partials/_home-banner.scss);
 * {
-  font-size: 16px;
-  font-family: "Sofia Sans Semi Condensed", sans-serif;
+  font-size: 1rem;
+  font-family: "Rubik", sans-serif;
   margin: 0;
   margin-inline: 0;
   margin-block: 0;
@@ -14,6 +16,10 @@
   text-decoration: none;
   list-style-type: none;
   box-sizing: border-box;
+}
+
+body {
+  background-color: #494F5C;
 }
 
 a {
