--- a/src/scss/partials/_buttons.scss
+++ b/src/scss/partials/_buttons.scss
@@ -1,6 +1,20 @@
 .btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     border: none;
     outline: none;
     background-color: transparent;
-    padding: 10px 15px;
+    padding: .8rem 1rem;
+    transition: all .5s linear;
+
+    &.btn-blue {
+        text-shadow: 0 2px 0 rgba(0, 0, 0, 0.15);
+        background-color: #169fe3;
+        box-shadow: 0 20px 40px 0 rgba(0, 0, 0, 0.3);
+
+        &:hover {
+            background-color: #3794c3;
+        }
+    }
 }
