--- a/src/scss/partials/_form-elements.scss
+++ b/src/scss/partials/_form-elements.scss
@@ -1,5 +1,6 @@
 .form-control {
-    padding: .375rem .75rem;
-    outline: none;
     border: none;
+    outline: none;
+    border-radius: .3rem;
+    padding: 0.75em 2em 0.75em 0.9em;
 }
