--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -16,11 +16,12 @@
 
 // Buttons
 @import url(./partials/_buttons.scss);
-
+@import url(./partials/_swiper.scss);
 // Form elements
 @import url(./partials/_form-elements.scss);
 
 @import url(./partials/_heads.scss);
+
 // Layouts
 @import url(./partials/_navbar.scss);
 
