--- a/src/scss/partials/_home-banner.scss
+++ b/src/scss/partials/_home-banner.scss
@@ -10,7 +10,7 @@
     }
 
     &.main-banner {
-        background-image: url(public/assets/images/banners/banner-1.jpg);
+        background-image: url(./assets/images/banners/banner-1.jpg);
 
     }
 
