home bundles created and game api added

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -16,7 +16,10 @@
 
 // Buttons
 @import url(./partials/_buttons.scss);
+//Swiper
 @import url(./partials/_swiper.scss);
+// Product Card
+@import url(./partials/_product-card.scss);
 // Form elements
 @import url(./partials/_form-elements.scss);
 
