--- a/src/scss/App.css
+++ b/src/scss/App.css
@@ -2,13 +2,14 @@
 @import url(./partials/_buttons.scss);
 @import url(./partials/_swiper.scss);
 @import url(./partials/_product-card.scss);
+@import url(./partials/_bundle-card.scss);
 @import url(./partials/_form-elements.scss);
 @import url(./partials/_heads.scss);
 @import url(./partials/_navbar.scss);
 @import url(./partials/_home-banner.scss);
 * {
   font-size: 1rem;
-  font-family: "Rubik", sans-serif;
+  font-family: "Rubik", "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
   margin-inline: 0;
   margin-block: 0;
@@ -24,10 +25,29 @@ body {
   background-color: #494F5C;
 }
 
+.flex {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+}
+
 a {
   text-decoration: none;
   font-size: inherit;
   color: inherit;
+  transition: 0.3s linear;
+}
+a.border-bottom {
+  position: relative;
+}
+a.border-bottom::after {
+  position: absolute;
+  content: "";
+  width: 0;
+  height: 2px;
+  bottom: -0.2rem;
+  left: 0;
+  transition: 0.3s linear;
 }
 
 .container {
