--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -46,6 +46,18 @@ body {
     gap: 1rem;
 }
 
+.overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, .6);
+    z-index: 0;
+}
+
+.none {
+    display: none;
+}
+
 a {
     text-decoration: none;
     font-size: inherit;
@@ -68,37 +80,37 @@ a {
 }
 
 .container {
-    max-width: 1320px;
+    max-width: 90%;
     padding: 0 1rem;
     margin: 0 auto;
 }
 
-@media only screen and (max-width: 575px) {
-    .container {
-        max-width: 100%;
-    }
-}
+// @media only screen and (max-width: 575px) {
+//     .container {
+//         max-width: 100%;
+//     }
+// }
 
-@media (min-width: 576px) and (max-width: 767px) {
-    .container {
-        max-width: 540px;
-    }
-}
+// @media (min-width: 576px) and (max-width: 767px) {
+//     .container {
+//         max-width: 540px;
+//     }
+// }
 
-@media (min-width: 768px) and (max-width: 991px) {
-    .container {
-        max-width: 720px;
-    }
-}
+// @media (min-width: 768px) and (max-width: 991px) {
+//     .container {
+//         max-width: 720px;
+//     }
+// }
 
-@media (min-width: 992px) and (max-width: 1199px) {
-    .container {
-        max-width: 720px;
-    }
-}
+// @media (min-width: 992px) and (max-width: 1199px) {
+//     .container {
+//         max-width: 720px;
+//     }
+// }
 
-@media (min-width: 1200px) and (max-width: 1399px) {
-    .container {
-        max-width: 1140px;
-    }
-}
+// @media (min-width: 1200px) and (max-width: 1399px) {
+//     .container {
+//         max-width: 1140px;
+//     }
+// }
