--- a/src/scss/partials/_buttons.scss
+++ b/src/scss/partials/_buttons.scss
@@ -6,6 +6,7 @@
     outline: none;
     background-color: transparent;
     padding: .8rem 1rem;
+    cursor: pointer;
     transition: all .3s linear;
 
     &.btn-blue {
