--- a/src/scss/partials/_heads.scss
+++ b/src/scss/partials/_heads.scss
@@ -29,3 +29,10 @@
         }
     }
 }
+
+@media only screen and (max-width: 767px) {
+    .uni-head {
+        font-size: 1.5rem;
+        padding: 1.5rem 0
+    }
+}
