--- a/src/scss/partials/_product-card.scss
+++ b/src/scss/partials/_product-card.scss
@@ -47,3 +47,15 @@
     }
 
 }
+
+@media only screen and (max-width: 768px) {
+    .product-card {
+        width: 100%;
+
+        .product-img {
+            img {
+                object-fit: fill;
+            }
+        }
+    }
+}
