--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -27,10 +27,12 @@
 // Form elements
 @import url(./partials/_form-elements.scss);
 
+// Heads
 @import url(./partials/_heads.scss);
 
 // Layouts
 @import url(./partials/_navbar.scss);
+@import url(./partials/_footer.scss);
 
 // Pages
 @import url(./partials/_home-banner.scss);
