--- a/src/scss/partials/_product-card.scss
+++ b/src/scss/partials/_product-card.scss
@@ -5,6 +5,8 @@
         height: 255.83px;
 
         img {
+            width: 100%;
+            height: 100%;
             filter: brightness(.6);
             transition: .3s linear;
         }
@@ -46,6 +48,12 @@
         }
     }
 
+}
+
+.game-container {
+    .product-card {
+        width: calc(33.333% - 16px);
+    }
 }
 
 @media only screen and (max-width: 768px) {
