--- a/src/scss/partials/_form-elements.scss
+++ b/src/scss/partials/_form-elements.scss
@@ -4,3 +4,10 @@
     border-radius: .3rem;
     padding: 0.75em 2em 0.75em 0.9em;
 }
+
+.lang-select {
+    width: 100%;
+    color: #fff;
+    padding: .5rem;
+    background-color: #272930;
+}
