--- a/src/scss/partials/_heads.scss
+++ b/src/scss/partials/_heads.scss
@@ -12,6 +12,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: .8rem 0;
 
     a {
         display: flex;
