--- a/src/scss/App.css
+++ b/src/scss/App.css
@@ -8,6 +8,7 @@
 @import url(./partials/_navbar.scss);
 @import url(./partials/_footer.scss);
 @import url(./partials/_home-banner.scss);
+@import url(./partials/_bundles.scss);
 * {
   font-size: 1rem;
   font-family: "Rubik", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -21,10 +22,6 @@
   list-style-type: none;
   box-sizing: border-box;
   scroll-behavior: smooth;
-}
-
-body {
-  background-color: #494F5C;
 }
 
 .flex {
