game detail page created

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -38,6 +38,7 @@
 // Pages
 @import url(./partials/_home-banner.scss);
 @import url(./partials/_bundles.scss);
+@import url(./partials/_detail-page.scss);
 
 .flex {
     display: flex;
