--- a/src/scss/partials/_heads.scss
+++ b/src/scss/partials/_heads.scss
@@ -8,6 +8,12 @@
     padding: 1rem 0;
 }
 
+.game-title {
+    font-size: 2em;
+    padding-bottom: 1rem;
+    color: #fff;
+}
+
 .head-box {
     display: flex;
     align-items: center;
