--- a/src/scss/partials/_navbar.scss
+++ b/src/scss/partials/_navbar.scss
@@ -6,7 +6,7 @@
     justify-content: center;
     color: #fff;
     padding: 1rem 0;
-    background-image: url('../assets/images/background/head-bg.jpg');
+    background-image: url(/assets/images/background/head-bg.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
