--- a/src/scss/App.css
+++ b/src/scss/App.css
@@ -9,6 +9,7 @@
 @import url(./partials/_footer.scss);
 @import url(./partials/_home-banner.scss);
 @import url(./partials/_bundles.scss);
+@import url(./partials/_detail-page.scss);
 * {
   font-size: 1rem;
   font-family: "Rubik", "Helvetica Neue", Helvetica, Arial, sans-serif;
