--- a/src/scss/partials/_home-banner.scss
+++ b/src/scss/partials/_home-banner.scss
@@ -10,11 +10,11 @@
     }
 
     &.main-banner {
-        background-image: url(../assets/images/banners/banner-1.jpg);
+        background-image: url(/assets/images/banners/banner-1.jpg);
     }
 
     &.bundle-banner {
-        background-image: url(../assets/images/banners/banner-2.jpg);
+        background-image: url(/assets/images/banners/banner-2.jpg);
     }
 
     .banner-content {
