pocketbase added and login page created

--- a/src/scss/App.css
+++ b/src/scss/App.css
@@ -10,6 +10,7 @@
 @import url(./partials/_home-banner.scss);
 @import url(./partials/_bundles.scss);
 @import url(./partials/_detail-page.scss);
+@import url(./partials/_register.scss);
 * {
   font-size: 1rem;
   font-family: "Rubik", "Helvetica Neue", Helvetica, Arial, sans-serif;
