--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -39,6 +39,7 @@
 @import url(./partials/_home-banner.scss);
 @import url(./partials/_bundles.scss);
 @import url(./partials/_detail-page.scss);
+@import url(./partials/_register.scss);
 
 .flex {
     display: flex;
