--- a/src/scss/partials/_buttons.scss
+++ b/src/scss/partials/_buttons.scss
@@ -10,6 +10,7 @@
     transition: all .3s linear;
 
     &.btn-blue {
+        color: #fff;
         text-shadow: 0 2px 0 rgba(0, 0, 0, 0.15);
         background-color: #169fe3;
         box-shadow: 0 20px 40px 0 rgba(0, 0, 0, 0.3);
