--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -40,6 +40,7 @@
 @import url(./partials/_bundles.scss);
 @import url(./partials/_detail-page.scss);
 @import url(./partials/_register.scss);
+@import url(./partials/_settings.scss);
 
 .flex {
     display: flex;
