--- a/src/scss/partials/_settings.scss
+++ b/src/scss/partials/_settings.scss
@@ -8,15 +8,40 @@
 
     .settings-item {
         background-color: #D5D9E1;
-
-        .form-group {
-            display: flex;
-            align-items: center;
-        }
+        padding: 1rem;
 
         .lang-select {
             background-color: #fff;
             color: #2f333d;
+        }
+
+        .account-form {
+            width: 80%;
+            margin: 0 auto;
+        }
+
+        .form-group {
+            margin: 1rem 0;
+
+            .form-control {
+                width: 100%;
+            }
+        }
+
+        label {
+            display: block;
+            font-weight: 600;
+            margin: .5rem 0;
+        }
+
+        .btn {
+            &.btn-blue {
+                padding: .85rem 2.5rem;
+                box-shadow: none;
+            }
+            &:disabled {
+                opacity: 0;
+            }
         }
     }
 }
