resetPassword and update profile added and completed

--- a/src/scss/partials/_buttons.scss
+++ b/src/scss/partials/_buttons.scss
@@ -24,3 +24,9 @@
 .button-box {
     justify-content: space-between;
 }
+
+.pass-btn {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
