memberBanner component created

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -41,6 +41,7 @@
 @import url(./partials/_detail-page.scss);
 @import url(./partials/_register.scss);
 @import url(./partials/_settings.scss);
+@import url(./partials/_member-page.scss);
 
 .flex {
     display: flex;
