--- a/src/scss/App.css
+++ b/src/scss/App.css
@@ -12,6 +12,7 @@
 @import url(./partials/_detail-page.scss);
 @import url(./partials/_register.scss);
 @import url(./partials/_settings.scss);
+@import url(./partials/_member-page.scss);
 * {
   font-size: 1rem;
   font-family: "Rubik", "Helvetica Neue", Helvetica, Arial, sans-serif;
